--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,82 +3,159 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
+@INPROCEEDINGS{10386048,
+  abbr={BIBM},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+  author={Guo, Kuo and Li, Yifan and Chen, Hao and Shen, Hong-Bin and Yang, Yang},
+  booktitle={the proceedings of IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  title={Isoform Function Prediction Based on Heterogeneous Graph Attention Networks},
+  year={2023},
+  volume={},
+  number={},
+  pages={522-527},
+  doi={10.1109/BIBM58861.2023.10386048}}
 
-@article{einstein1950meaning,
-  abbr={AJP},
+@article{chen2023cell,
+  abbr={Nature Methods},
   bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  title={SCS: cell segmentation for high-resolution spatial transcriptomics},
+  author={Chen, Hao and Li, Dongshunyi and Bar-Joseph, Ziv},
+  journal={Nature Methods},
+  volume={20},
+  pages={1237–1243},
+  year={2023},
+  organization={Springer Nature}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+@inproceedings{chen2023cell,
+  abbr={RECOMB},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  title={Cell segmentation for high-resolution spatial transcriptomics},
+  author={Chen, Hao and Li, Dongshunyi and Bar-Joseph, Ziv},
+  booktitle={proceedings of 27th Annual International Conference on Research in Computational Molecular Biology (RECOMB)},
+  volume={13976},
+  pages={251},
+  year={2023},
+  organization={Springer Nature}
+}
+
+@article{chen2021finer,
+  abbr={NAR G&B},
+  bibtex_show={true},
+  title={Finer: enhancing the prediction of tissue-specific functions of isoforms by refining isoform interaction networks},
+  author={Chen, Hao and Shaw, Dipan and Bu, Dongbo and Jiang, Tao},
+  journal={NAR Genomics and Bioinformatics},
+  volume={3},
+  number={2},
+  pages={lqab057},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+@article{chen2019diffuse,
+  abbr={ISMB/ECCB},
+  bibtex_show={true},
+  title={DIFFUSE: predicting isoform functions from sequences and expression profiles via deep learning},
+  author={Chen, Hao and Shaw, Dipan and Zeng, Jianyang and Bu, Dongbo and Jiang, Tao},
+  journal={Bioinformatics; Also in proceedings of the 27th Annual International Conference on Intelligent Systems for Molecular Biology and 17th European Conference on Computational Biology (ISMB/ECCB)},
+  volume={35},
+  number={14},
+  pages={i284--i294},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{shaw2018deepisofun,
+  abbr={Bioinformatics},
+  bibtex_show={true},
+  title={DeepIsoFun: a deep domain adaptation approach to predict isoform functions},
+  author={Shaw, Dipan and Chen, Hao and Jiang, Tao},
+  journal={Bioinformatics},
+  volume={35},
+  number={15},
+  pages={2535--2544},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{sennet2022nih,
+  abbr={Nature Aging},
+  bibtex_show={true},
+  title={NIH SenNet Consortium to map senescent cells throughout the human lifespan to understand physiological health},
+  author={SenNet Consortium},
+  journal={Nature Aging},
+  volume={2},
+  number={12},
+  pages={1090--1100},
+  year={2022},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{shaw2021deeplpi,
+  abbr={BMC Bioinform.},
+  bibtex_show={true},
+  title={DeepLPI: a multimodal deep learning method for predicting the interactions between lncRNAs and protein isoforms},
+  author={Shaw, Dipan and Chen, Hao and Xie, Minzhu and Jiang, Tao},
+  journal={BMC Bioinformatics},
+  volume={22},
+  number={1},
+  pages={1--22},
+  year={2021},
+  publisher={BioMed Central}
+}
+
+@article{gurkar2023spatial,
+  abbr={Nature Aging},
+  bibtex_show={true},
+  title={Spatial mapping of cellular senescence: emerging challenges and opportunities},
+  author={Gurkar, Aditi U and Gerencser, Akos A and Mora, Ana L and Nelson, Andrew C and Zhang, Anru R and Lagnado, Anthony B and Enninful, Archibald and Benz, Christopher and Furman, David and Beaulieu, Delphine and Jurk, Diana and Thompson, Elizabeth L and Wu, Fei and Rodriguez, Fernanda and Barthel, Grant and Chen, Hao and Phatnani, Hemali and Heckenbach, Indra and Chuang, Jeffrey H and Horrell, Jeremy and Petrescu, Joana and Alder, Jonathan K and Lee, Jun Hee and Niedernhofer, Laura J and Kumar, Manoj and Königshoff, Melanie and Bueno, Marta and Sokka, Miiko and Scheibye-Knudsen, Morten and Neretti, Nicola and Eickelberg, Oliver and Adams, Peter D and Hu, Qianjiang and Zhu, Quan and Porritt, Rebecca A and Dong, Runze and Peters, Samuel and Victorelli, Stella and Pengo, Thomas and Khaliullin, Timur and Suryadevara, Vidyani and Fu, Xiaonan and Bar-Joseph, Ziv and Ji, Zhicheng and Passos, João F},
+  journal={Nature Aging},
+  volume={3},
+  number={7},
+  pages={776--790},
+  year={2023},
+  publisher={Nature Publishing Group US New York}
+}
+
+@preprint{chen2022unified,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={A unified analysis of atlas single cell data},
+  author={Chen, Hao and Nguyen, Nam D and Ruffalo, Matthew and Bar-Joseph, Ziv},
+  journal={bioRxiv},
+  pages={2022--08},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@preprint{chen2023scresolve,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={scResolve: Recovering single cell expression profiles from multi-cellular spatial transcriptomics},
+  author={Chen, Hao and Lee, Young Je and Ovando, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
+  journal={bioRxiv},
+  pages={2023--12},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@preprint{zhou2023drug,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={Drug target prediction through deep learning functional representation of gene signatures},
+  author={Chen, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou, Yingyao},
+  year={2023}
+}
+
+@article{hao2022global,
+  abbr={Curr. Genom.},
+  bibtex_show={true},
+  title={A Global Analysis of Alternative Splicing of Dichocarpum Medicinal Plants, Ranunculales},
+  author={Hao*, Da-Cheng and Chen*, Hao and Xiao, Pei-Gen and Jiang, Tao},
+  journal={Current Genomics},
+  volume={23},
+  number={3},
+  pages={207},
+  year={2022},
+  publisher={Bentham Science Publishers}
 }
