--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{aps = {American Physical Society}}
 
 @INPROCEEDINGS{10386048,
   abbr={BIBM},
