--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -144,7 +144,10 @@
   bibtex_show={true},
   title={Drug target prediction through deep learning functional representation of gene signatures},
   author={Chen, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou, Yingyao},
-  journal={Nature Communications (accepted in principle)},
+  journal={Nature Communications},
+  volume={15},
+  number={1},
+  pages={1853},
   year={2024}
 }
 
