--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -128,15 +128,13 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
-@preprint{chen2023scresolve,
-  abbr={Preprint},
-  bibtex_show={true},
-  title={scResolve: Recovering single cell expression profiles from multi-cellular spatial transcriptomics},
-  author={Chen, Hao and Lee, Young Je and Ovando, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
-  journal={bioRxiv},
-  pages={2023--12},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory}
+@article{chen2024recovering,
+  abbr={Cell Rep. Methods},
+  title={Recovering single-cell expression profiles from spatial transcriptomics with scResolve},
+  author={Chen, Hao and Lee, Young Je and Ovando-Ricardez, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
+  journal={Cell Reports Methods},
+  year={2024},
+  publisher={Elsevier}
 }
 
 @article{zhou2023drug,
