--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -137,6 +137,18 @@
   publisher={Elsevier}
 }
 
+@article{xu2024reference,
+  abbr={Genome Research},
+  title={Reference-informed prediction of alternative splicing and splicing-altering mutations from sequences},
+  author={Xu, Chencheng and Bao, Suying and Wang, Ye and Li, Wenxing and Chen, Hao and Shen, Yufeng and Jiang, Tao and Zhang, Chaolin},
+  journal={Genome Research},
+  volume={34},
+  number={7},
+  pages={1052--1065},
+  year={2024},
+  publisher={Cold Spring Harbor Lab}
+}
+
 @article{zhou2023drug,
   abbr={Nature Commun.},
   bibtex_show={true},
