--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -128,6 +128,15 @@
   publisher={Cold Spring Harbor Laboratory}
 }
 
+@article{yougn2024protocal,
+  abbr={STAR Protocols},
+  title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
+  author={Lee, Young Je and Chen, Hao and Lugo-Martinez, Jose},
+  journal={STAR Protocols (Accepted in principle)},
+  year={2024},
+  publisher={Elsevier}
+}
+
 @article{chen2024recovering,
   abbr={Cell Rep. Methods},
   title={Recovering single-cell expression profiles from spatial transcriptomics with scResolve},
