--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -131,7 +131,7 @@
 @article{yougn2024protocal,
   abbr={STAR Protocols},
   title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
-  author={Lee, Young Je and Chen, Hao and Lugo-Martinez, Jose},
+  author={Lee*, Young Je and Chen*, Hao and Lugo-Martinez, Jose},
   journal={STAR Protocols (Accepted in principle)},
   year={2024},
   publisher={Elsevier}
