--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -122,9 +122,8 @@
   bibtex_show={true},
   title={A unified analysis of atlas single cell data},
   author={Chen, Hao and Nguyen, Nam D and Ruffalo, Matthew and Bar-Joseph, Ziv},
-  journal={bioRxiv},
-  pages={2022--08},
-  year={2022},
+  journal={Genome Research (Accepted)},
+  year={2025},
   publisher={Cold Spring Harbor Laboratory}
 }
 
@@ -132,8 +131,8 @@
   abbr={STAR Protocols},
   title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
   author={Lee*, Young Je and Chen*, Hao and Lugo-Martinez, Jose},
-  journal={STAR Protocols (Accepted in principle)},
-  year={2024},
+  journal={STAR Protocols (Accepted)},
+  year={2025},
   publisher={Elsevier}
 }
 
