--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,8 +118,7 @@
 }
 
 @preprint{chen2022unified,
-  abbr={Preprint},
-  bibtex_show={true},
+  abbr={Genome Research},
   title={A unified analysis of atlas single cell data},
   author={Chen, Hao and Nguyen, Nam D and Ruffalo, Matthew and Bar-Joseph, Ziv},
   journal={Genome Research (Accepted)},
