--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -117,8 +117,8 @@
   publisher={Nature Publishing Group US New York}
 }
 
-@preprint{chen2022unified,
-  abbr={Genome Research},
+@article{chen2022unified,
+  abbr={Genome Res.},
   title={A unified analysis of atlas single cell data},
   author={Chen, Hao and Nguyen, Nam D and Ruffalo, Matthew and Bar-Joseph, Ziv},
   journal={Genome Research (Accepted)},
