--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -121,7 +121,7 @@
   abbr={Genome Res.},
   title={A unified analysis of atlas single cell data},
   author={Chen, Hao and Nguyen, Nam D and Ruffalo, Matthew and Bar-Joseph, Ziv},
-  journal={Genome Research (Accepted)},
+  journal={Genome Research},
   year={2025},
   publisher={Cold Spring Harbor Laboratory}
 }
@@ -130,7 +130,7 @@
   abbr={STAR Protocols},
   title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
   author={Lee*, Young Je and Chen*, Hao and Lugo-Martinez, Jose},
-  journal={STAR Protocols (Accepted)},
+  journal={STAR Protocols},
   year={2025},
   publisher={Elsevier}
 }
