--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,6 +27,17 @@
   organization={Springer Nature}
 }
 
+@preprint{zhou2025spatrace,
+  abbr={Preprint},
+  bibtex_show={true},
+  title={SpaTRACE: Spatiotemporal recurrent auto-encoder for reconstructing signaling and regulatory networks from spatiotemporal transcriptomics data},
+  author={Zhou*, Hongliang and Chen*<sup>†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
+  journal={bioRxiv},
+  pages={2025--11},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @inproceedings{chen2023cell,
   abbr={RECOMB},
   bibtex_show={true},
