--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={Preprint},
   bibtex_show={true},
   title={SpaTRACE: Spatiotemporal recurrent auto-encoder for reconstructing signaling and regulatory networks from spatiotemporal transcriptomics data},
-  author={Zhou*, Hongliang and Chen*<sup>†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
+  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*,†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
   journal={bioRxiv},
   pages={2025--11},
   year={2025},
@@ -140,7 +140,7 @@
 @article{yougn2024protocal,
   abbr={STAR Protocols},
   title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
-  author={Lee*, Young Je and Chen*, Hao and Lugo-Martinez, Jose},
+  author={Lee<sup>*</sup>, Young Je and Chen<sup>*</sup>, Hao and Lugo-Martinez, Jose},
   journal={STAR Protocols},
   year={2025},
   publisher={Elsevier}
@@ -149,7 +149,7 @@
 @article{chen2024recovering,
   abbr={Cell Rep. Methods},
   title={Recovering single-cell expression profiles from spatial transcriptomics with scResolve},
-  author={Chen, Hao and Lee, Young Je and Ovando-Ricardez, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
+  author={Chen<sup>*</sup>, Hao and Lee<sup>*</sup>, Young Je and Ovando-Ricardez, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
   journal={Cell Reports Methods},
   year={2024},
   publisher={Elsevier}
@@ -183,7 +183,7 @@
   abbr={Curr. Genom.},
   bibtex_show={true},
   title={A Global Analysis of Alternative Splicing of Dichocarpum Medicinal Plants, Ranunculales},
-  author={Hao*, Da-Cheng and Chen*, Hao and Xiao, Pei-Gen and Jiang, Tao},
+  author={Hao<sup>*</sup>, Da-Cheng and Chen<sup>*</sup>, Hao and Xiao, Pei-Gen and Jiang, Tao},
   journal={Current Genomics},
   volume={23},
   number={3},
