--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={Preprint},
   bibtex_show={true},
   title={SpaTRACE: Spatiotemporal recurrent auto-encoder for reconstructing signaling and regulatory networks from spatiotemporal transcriptomics data},
-  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*</sup><sup>,</sup><sup>†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
+  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
   journal={bioRxiv},
   pages={2025--11},
   year={2025},
@@ -149,7 +149,7 @@
 @article{chen2024recovering,
   abbr={Cell Rep. Methods},
   title={Recovering single-cell expression profiles from spatial transcriptomics with scResolve},
-  author={Chen<sup>*</sup>, Hao and Lee<sup>*</sup>, Young Je and Ovando-Ricardez, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
+  author={Chen, Hao and Lee, Young Je and Ovando-Ricardez, Jose A and Rosas, Lorena and Rojas, Mauricio and Mora, Ana L and Bar-Joseph, Ziv and Lugo-Martinez, Jose},
   journal={Cell Reports Methods},
   year={2024},
   publisher={Elsevier}
@@ -171,7 +171,7 @@
   abbr={Nature Commun.},
   bibtex_show={true},
   title={Drug target prediction through deep learning functional representation of gene signatures},
-  author={Chen, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou, Yingyao},
+  author={Chen<sup>†</sup>, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou<sup>†</sup>, Yingyao},
   journal={Nature Communications},
   volume={15},
   number={1},
