--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={Preprint},
   bibtex_show={true},
   title={SpaTRACE: Spatiotemporal recurrent auto-encoder for reconstructing signaling and regulatory networks from spatiotemporal transcriptomics data},
-  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
+  author={Zhou*, Hongliang and Chen*†, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez†, Jose},
   journal={bioRxiv},
   pages={2025--11},
   year={2025},
@@ -140,7 +140,7 @@
 @article{yougn2024protocal,
   abbr={STAR Protocols},
   title={Protocol to recover single cell expression profiles from spatial transcriptomics in cluster computing},
-  author={Lee<sup>*</sup>, Young Je and Chen<sup>*</sup>, Hao and Lugo-Martinez, Jose},
+  author={Lee*, Young Je and Chen*, Hao and Lugo-Martinez, Jose},
   journal={STAR Protocols},
   year={2025},
   publisher={Elsevier}
@@ -171,7 +171,7 @@
   abbr={Nature Commun.},
   bibtex_show={true},
   title={Drug target prediction through deep learning functional representation of gene signatures},
-  author={Chen<sup>†</sup>, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou<sup>†</sup>, Yingyao},
+  author={Chen†, Hao and King, Frederick and Zhou, Bin and Wang, Yu and Canedy, Carter and Hayashi, Joel and Zhong, Yong and Chang, Max and Pache, Lars and Wong, Julian and Jia, Yong and Joslin, John and Jiang, Tao and Benner, Christopher and Chanda, Sumit K and Zhou†, Yingyao},
   journal={Nature Communications},
   volume={15},
   number={1},
@@ -183,7 +183,7 @@
   abbr={Curr. Genom.},
   bibtex_show={true},
   title={A Global Analysis of Alternative Splicing of Dichocarpum Medicinal Plants, Ranunculales},
-  author={Hao<sup>*</sup>, Da-Cheng and Chen<sup>*</sup>, Hao and Xiao, Pei-Gen and Jiang, Tao},
+  author={Hao*, Da-Cheng and Chen*, Hao and Xiao, Pei-Gen and Jiang, Tao},
   journal={Current Genomics},
   volume={23},
   number={3},
