--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={Preprint},
   bibtex_show={true},
   title={SpaTRACE: Spatiotemporal recurrent auto-encoder for reconstructing signaling and regulatory networks from spatiotemporal transcriptomics data},
-  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*</sup><sup>&#44;</sup><sup>†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
+  author={Zhou<sup>*</sup>, Hongliang and Chen<sup>*</sup><sup>†</sup>, Hao and Rudnick, Zoe and Baalbaki, Sarah I and Lee, Young Je and Lugo-Martinez<sup>†</sup>, Jose},
   journal={bioRxiv},
   pages={2025--11},
   year={2025},
